# unimoc

./: .gitignore  CMakeLists.txt  CMakePresets.json  requirements.txt
hardware/: HardwareInterface.hpp
hardware/batterycasecontroller/: CMakeLists.txt  adc.cpp  analog.cpp  base.cpp  mcuviewer.cfg  project.xml
hardware/batterycasecontroller/modm/: CMakeLists.txt  openocd.cfg
hardware/batterycasecontroller/modm/cmake/: ModmConfiguration.cmake
hardware/batterycasecontroller/modm/ext/gcc/: cabi.c
hardware/batterycasecontroller/modm/ext/rtt/: SEGGER_RTT_Conf.h  rtt_modm_port.cpp
hardware/batterycasecontroller/modm/modm_tools/: jlink.py  openocd.py
hardware/batterycasecontroller/modm/src/modm/: platform.hpp
hardware/batterycasecontroller/modm/src/modm/architecture/: interface.hpp
hardware/batterycasecontroller/modm/src/modm/architecture/interface/: assert.hpp
hardware/batterycasecontroller/modm/src/modm/io/: iostream.hpp  iostream_printf.cpp
hardware/batterycasecontroller/modm/src/modm/platform/adc/: adc_1.hpp  adc_1_impl.hpp  adc_2.hpp  adc_2_impl.hpp  adc_3.hpp  adc_3_impl.hpp  adc_4.hpp  adc_4_impl.hpp  adc_5.hpp  adc_5_impl.hpp  adc_interrupt_1.cpp  adc_interrupt_2.cpp  adc_interrupt_3.cpp  adc_interrupt_4.cpp  adc_interrupt_5.cpp
hardware/batterycasecontroller/modm/src/modm/platform/clock/: rcc.cpp  rcc.hpp  rcc_defs.cpp  (+2 more)
hardware/host/: CMakeLists.txt  hardware_interface.cpp  hardware_interface_config.hpp
lib/: CMakeLists.txt
lib/units/: Units.hpp
src/logging/: logging.cpp
tests/: CMakeLists.txt  system_test.cpp  three_phase_system_test.cpp
(+6 files in other folders)
